<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/log_email_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nfc_mail" />

    <EditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/log_email_title"
        android:hint="@string/nfc_mail"
        android:inputType="textEmailAddress"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/log_password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:text="@string/nfc_password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/log_password_title"
        android:hint="@string/nfc_password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nfc_cancel_btn" />

        <Button
            android:id="@+id/validate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nfc_validate_btn" />

    </LinearLayout>
</RelativeLayout>