<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/cardview_light_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background">

        <TextView
            android:text="@string/uuid"
            android:id="@+id/beacon_card_info_uuid"
            android:layout_width="387dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.666"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:text="@string/major"
            android:id="@+id/beacon_card_info_major"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/textView_separator"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/beacon_card_info_uuid" />

        <TextView
            android:text="-"
            android:id="@+id/textView_separator"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/beacon_card_info_minor"
            card_view:layout_constraintStart_toEndOf="@+id/beacon_card_info_major"
            card_view:layout_constraintTop_toBottomOf="@+id/beacon_card_info_uuid" />

        <TextView
            android:text="@string/minor"
            android:id="@+id/beacon_card_info_minor"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/beacon_card_info_bar"
            card_view:layout_constraintStart_toEndOf="@+id/textView_separator"
            card_view:layout_constraintTop_toBottomOf="@+id/beacon_card_info_uuid"
            card_view:layout_constraintVertical_bias="0.6" />

        <ProgressBar
            android:id="@+id/beacon_card_info_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/beacon_card_info_rssi"
            card_view:layout_constraintStart_toEndOf="@+id/beacon_card_info_minor"
            card_view:layout_constraintTop_toBottomOf="@+id/beacon_card_info_uuid"
            card_view:layout_constraintVertical_bias="0.428" />

        <TextView
            android:text="@string/rssi"
            android:id="@+id/beacon_card_info_rssi"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/beacon_card_info_bar"
            card_view:layout_constraintTop_toBottomOf="@+id/beacon_card_info_uuid" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>